# sievelib

./: .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  COPYING  MANIFEST.in  README  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile
.github/workflows/: sievelib.yml
sievelib/: __init__.py  commands.py  digest_md5.py  factory.py  managesieve.py  parser.py  tools.py
sievelib/tests/: __init__.py  factory.py  parser.py  test_factory.py  test_managesieve.py  test_parser.py
sievelib/tests/files/: utf8_sieve.txt
